--- a/restaurante-template/index.html
+++ b/restaurante-template/index.html
@@ -52,7 +52,7 @@
             <a href="#ContactandLocation">Contato</a>
         </div>
 
-        <div class="md:hidden text-2xl">
+        <div id="menuHamburguer"  class="md:hidden text-2xl">
             <i class="fa-solid fa-bars"></i>
         </div>
 
@@ -65,6 +65,19 @@
    </div>
 
    </header>
+
+   <div id="navModal" class=" hidden flex-col items-center  bg-white modal gap-16"> 
+    
+            <i id="closeModal" class="fa-solid fa-xmark text-3xl"></i>
+
+            <nav class="flex flex-col items-center text-2xl gap-12">
+                <a href="#About">Sobre</a>
+                <a href="#Menu">Menu</a>
+                <a href="#ContactandLocation">Contato</a>
+            </nav>
+
+
+   </div>
 
    <section id="About" class=" flex notShow flex-col  items-center justify-center px-5 py-10">
 
